finish reading a new book: To another country

--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
             <h2>传记</h2>
             <ul>
             <li><a href="Mozart/Mozart.html">莫扎特</a></li>
-            <li><a href="TheAutobiographyOfYayoiKusama/TheAutobiographyOfYayoiKusama.html">无限的网: 草间弥生自传</a></li>            
+            <li><a href="TheAutobiographyOfYayoiKusama/TheAutobiographyOfYayoiKusama.html">无限的网: 草间弥生自传</a></li>  
+            <li><a href="ToAnotherCountry/index.html">迈向另一个国度——森山大道</a></li>
             <li><a href="TheLettersofVincentVanGoah/index.html">亲爱的提奥：梵高传</a></li>
             <li><a href="thelifeofmichaelangelo/index.html">米开朗琪罗传</a></li>
             <li><a href="MichelangeloAndThePopesCeiling/index.html">米开朗琪罗与教皇的天花板</a></li>
