--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             <h2>政治和社会关系</h2>
             <ul>
             <li><a href="UnderstandingGlobalConflictandCooperation/index.html">理解国际冲突与合作</a></li>
+            <li><a href="CountriesAndConcepts/countries_and_concepts_notebook.html">国家的常识</a></li>
             <li><a href="TheHumanSwarm/index.html">从部落到国家 人类社会的崛起,繁荣与衰落</a></li>
             <li><a href="TheCulturalOriginsOfHumanCognition/index.html">人类认知的文化起源</a></li>
             <li><a href="WritingOnTheWall/index.html">社交媒体简史</a></li>
