--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             <li><a href="zenandartofmotorcyclemaintenance/index.html">禅与摩托车维修艺术</a></li>
             <li><a href="MedievalEurope/8kuNoteBook_MedievalEurope.html">欧洲中世纪史</a></li>
             <li><a href="aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html">欧洲现代史</a></li>
+            <li><a href="HistoryTimeline/history_timeline.html">历史时间线</a></li>
             <li><a href="EmpireOfCotton/8kuNoteBook_EmpireOfCotton.html">棉花帝国 7%</a></li>
             <li><a href="Art_Painting/8kuNoteBook_Painting.html">美术史/艺术的故事</a></li>
             <li><a href="Art_Music/8kuNoteBook_Music.html">音乐史</a></li>
