update history timeline interaction experience

--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -11,6 +11,22 @@
   <!-- // Fonts -->
 </head>
 <body>
+<!-- Filter Options -->
+<div class="filter-options">
+  <div id="dropdownMenuButton" class="dropdown-button">
+    Select Areas <i class="fa fa-caret-down"></i>
+  </div>
+  <div id="dropdownMenu" class="dropdown-menu">
+    <label><input type="checkbox" class="area-option" value="all"> All Areas</label>
+    <label><input type="checkbox" class="area-option" value="China"> China</label>
+    <label><input type="checkbox" class="area-option" value="Africa"> Africa</label>
+    <label><input type="checkbox" class="area-option" value="Europe"> Europe</label>
+    <!-- Add other areas as needed -->
+    <button id="confirmSelection" class="confirm-btn">Confirm</button>
+  </div>
+</div>
+
+
   <!-- Vertical Timeline -->
   <section id="conference-timeline">
     <div class="timeline-start">Start</div>
@@ -20,7 +36,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>2000 B.C. - 1500 B.C. 夏朝</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -28,7 +44,7 @@
         </div>
         <div class="content-right-container">
           <div class="content-right">
-            <h4>Africa</h4>
+            <h4 class="area">Africa</h4>
             <h3>2685 B.C. - 2180 B.C. 埃及“古王国” 金字塔时期</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
           </div>
@@ -45,7 +61,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>1700 B.C. - 1027 B.C. 商</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -58,7 +74,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>1027 B.C. - 711 B.C. 西周</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -75,7 +91,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>770 B.C. - 256 B.C. 东周</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -88,7 +104,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>770 B.C. - 476/403 B.C. 春秋时期</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -101,7 +117,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>475/403 B.C. - 221 B.C. 战国时期</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -114,7 +130,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>221 B.C. - 207 B.C. 秦</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -127,7 +143,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>206 B.C. - A.D. 9 西汉</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -136,7 +152,7 @@
 
         <div class="content-right-container">
           <div class="content-right">
-            <h4>Europe</h4>
+            <h4 class="area">Europe</h4>
             <h3>27 B.C. - A.D. 1453 罗马帝国</h3>
             <p>存在1000多年，中国史书称为 “大秦” 或 “海西国”。</p>
             <p>27 B.C. - A.D. 395 统一政体</p>
@@ -157,7 +173,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>221 B.C. - 207 B.C. 秦</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -170,7 +186,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 9 - 24 新</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -183,7 +199,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 25 - 220 东汉</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
@@ -200,7 +216,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 220 - 280 三国时期</h3>
             <p>狭义 220 - 280，广义 184/190/208 - 280。</p>
             <p>220 - 256 魏</p>
@@ -216,7 +232,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 265 - 316 西晋</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -232,7 +248,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 317 - 420 东晋</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -248,7 +264,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 317 - 420 东晋</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -264,7 +280,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 420 - 588 南北朝</h3>
             <p><b>南朝 420 - 588</b></p>
             <p>420 - 478 宋</p>
@@ -291,7 +307,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 581 - 617 隋</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -307,7 +323,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 618 - 907 唐</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -323,7 +339,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 907 - 960 五代</h3>
             <p>907 - 923 后梁</p>
             <p>923 - 936 后唐</p>
@@ -340,7 +356,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 907 - 979 十国</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -352,7 +368,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 960 - 1279 宋</h3>
             <p>960 - 1127 北宋</p>
             <p>1127 - 1279 南宋</p>
@@ -370,7 +386,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 916 - 1125 辽</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -382,7 +398,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 1038 - 1227 西夏</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -394,7 +410,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 1115 - 1234 金</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -406,7 +422,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 1279 - 1368 元</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -418,7 +434,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 1368 - 1644 明</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -430,7 +446,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 1644 - 1911 清</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -442,7 +458,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 1911 - 1949 中华民国</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -454,7 +470,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <h4>China</h4>
+            <h4 class="area">China</h4>
             <h3>A.D. 1949 - recent 中华人民共和国</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -467,5 +483,8 @@
     <div class="timeline-end">End</div>
   </section>
   <!-- // Vertical Timeline -->
+
+  <script src="dropdown-filter.js"></script>
+
 </body>
 </html>
