--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Responsive Vertical Timeline</title>
+  <title>History Timeline</title>
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.css">
   <link rel="stylesheet" href="style.css">
