--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.css">
   <link rel="stylesheet" href="style.css">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,400italic,700,900' rel='stylesheet' type='text/css'>
@@ -15,11 +16,13 @@
 
 </head>
 <body>
-
-  <label class="switch">
-    <input type="checkbox" id="toggleFilters" checked>
-    <span class="slider round"></span>
-  </label>
+  <div class="nav">
+    <a  class="nav-btn" href="https://www.bakumatata.com/notes/"><i class="material-symbols-outlined">home</i></a>
+    <label class="switch">
+      <input type="checkbox" id="toggleFilters" checked>
+      <span class="slider round"></span>
+    </label>
+  </div>
 
 <!-- Filter Options -->
 <div class="filter-wrapper">
@@ -172,7 +175,7 @@
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E6%B0%91%E6%97%8F%E5%A4%A7%E8%BF%81%E5%BE%99%20400-500">Read more</a>
           </span>
 
@@ -259,7 +262,7 @@
           </div>
           
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E7%BD%97%E9%A9%AC%E5%B8%9D%E5%9B%BD%20Roman%20Empire">Read more</a></span>
         </div>
       </div>
@@ -408,7 +411,7 @@
             <h3>A.D. 481 - 843 法兰克王国诞生</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E6%B3%95%E5%85%B0%E5%85%8B%E7%8E%8B%E5%9B%BD%20Francia%EF%BC%88481%E2%80%93843%EF%BC%89">Read more</a></span>
         </div>
 
@@ -441,7 +444,7 @@
             <h3>A.D. 600 - 661 伊斯兰教诞生</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E4%BC%8A%E6%96%AF%E5%85%B0%E6%95%99%E7%9A%84%E8%AF%9E%E7%94%9F%20600-661">Read more</a></span>
         </div>
 
@@ -475,7 +478,7 @@
             <h3>A.D. 800/962 - 1806 神圣罗马帝国</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E7%A5%9E%E5%9C%A3%E7%BD%97%E9%A9%AC%E5%B8%9D%E5%9B%BD%20Holy%20Roman%20Empire%20800/962%EF%BC%8D1806">Read more</a></span>
         </div>
         <div class="meta-date">
@@ -545,7 +548,7 @@
             <p>英格兰王国诞生</p>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E8%8B%B1%E6%A0%BC%E5%85%B0%E7%BB%9F%E4%B8%80%20927">Read more</a></span>
 
       </div>
@@ -572,7 +575,7 @@
             <h3>A.D. 987 - 1792 法兰西王国诞生</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E6%B3%95%E5%85%B0%E8%A5%BF%E7%8E%8B%E5%9B%BD%20Kingdom%20of%20France%20987-1792">Read more</a></span>
         </div>
 
@@ -605,7 +608,7 @@
             <h3>A.D. 1054 天主教和东正教分裂</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism:%5B%5B%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -620,7 +623,7 @@
             <h3>A.D. 1096 - 1291 十字军东征</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E5%8D%81%E5%AD%97%E5%86%9B%E4%B8%9C%E5%BE%81%20Crusades%201096-1291">Read more</a></span>
         </div>
       </div>
@@ -661,7 +664,7 @@
             <h3>A.D. 1299 - 1922 奥斯曼帝国诞生</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire:%5B%5B%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire%5D%5D">Read more</a></span>
         </div>
 
@@ -681,7 +684,7 @@
             <h3>A.D. 1315 - 1322 大饥荒</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E5%A4%A7%E9%A5%A5%E8%8D%92%20the%20Great%20Famine%201315-1322">Read more</a></span>
         </div>        
 
@@ -701,7 +704,7 @@
             <h3>A.D. 1346 - 1353 黑死病</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E9%BB%91%E6%AD%BB%E7%97%85%20Black%20Death%201346~1353">Read more</a></span>
         </div>
       </div>
@@ -730,7 +733,7 @@
             <h3>A.D. 1378～1417年天主教会大分裂</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9:%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9">Read more</a></span>
         </div>
       </div>
@@ -755,7 +758,7 @@
             <h3>14C - 17C 文艺复兴</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4:%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4">Read more</a></span>
         </div>
         <div class="meta-date">
@@ -786,7 +789,7 @@
             <h3>A.D. 1543 - 1687 科学革命</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%A7%91%E5%AD%A6%E9%9D%A9%E5%91%BD%20Scientific%20revolution:%5B%5B%E7%A7%91%E5%AD%A6%E9%9D%A9%E5%91%BD%20Scientific%20revolution%5D%5D">Read more</a></span>
         </div>
         <div class="meta-date">
@@ -806,7 +809,7 @@
             <p>英国历史上的<b>黄金时代</b></p>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E4%BC%8A%E4%B8%BD%E8%8E%8E%E7%99%BD%E6%97%B6%E4%BB%A3%20Elizabethan%20era:%5B%5B%E4%BC%8A%E4%B8%BD%E8%8E%8E%E7%99%BD%E6%97%B6%E4%BB%A3%20Elizabethan%20era%5D%5D">Read more</a></span>
         </div>
 
@@ -824,7 +827,7 @@
             <p>欧洲大陆最后一次重大战争</p>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War:%5B%5B%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War%5D%5D">Read more</a></span>
         </div>
 
@@ -859,7 +862,7 @@
             <p>这场政变以不流血著名, 诞生了 1689年权利法案, 是英国君主立宪制形成的重要事件。</p>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%85%89%E8%8D%A3%E9%9D%A9%E5%91%BD%20Glorious%20Revolution:%5B%5B%E5%85%89%E8%8D%A3%E9%9D%A9%E5%91%BD%20Glorious%20Revolution%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -874,7 +877,7 @@
             <h3>A.D. 1760 - 1840 第一次工业革命</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%B7%A5%E4%B8%9A%E9%9D%A9%E5%91%BD%2F%E7%AC%AC%E4%B8%80%E6%AC%A1%E5%B7%A5%E4%B8%9A%E9%9D%A9%E5%91%BD%20Industrial%20Revolution:%5B%5B%E5%B7%A5%E4%B8%9A%E9%9D%A9%E5%91%BD%2F%E7%AC%AC%E4%B8%80%E6%AC%A1%E5%B7%A5%E4%B8%9A%E9%9D%A9%E5%91%BD%20Industrial%20Revolution%5D%5D">Read more</a></span>
         </div>
         <div class="meta-date">
@@ -893,7 +896,7 @@
             <h3>A.D. 1765 - 1783 美国独立战争</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%BE%8E%E5%9B%BD%E7%8B%AC%E7%AB%8B%E6%88%98%E4%BA%89%2F%E7%BE%8E%E5%9B%BD%E9%9D%A9%E5%91%BD:%E7%BE%8E%E5%9B%BD%E7%8B%AC%E7%AB%8B%E6%88%98%E4%BA%89%2F%E7%BE%8E%E5%9B%BD%E9%9D%A9%E5%91%BD">Read more</a></span>
         </div>
       </div>
@@ -908,7 +911,7 @@
             <h3>A.D. 1789 法国大革命</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E6%B3%95%E5%9B%BD%E5%A4%A7%E9%9D%A9%E5%91%BD:%E6%B3%95%E5%9B%BD%E5%A4%A7%E9%9D%A9%E5%91%BD">Read more</a></span>
         </div>
       </div>
@@ -924,7 +927,7 @@
             <p>时间跨度: 确切开始时间没有共识, 但通常以1789年法国大革命或拿破仑战争开始(1804~1815)为结束.</p>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%90%AF%E8%92%99%E8%BF%90%E5%8A%A8%20Enlightenment:%5B%5B%E5%90%AF%E8%92%99%E8%BF%90%E5%8A%A8%20Enlightenment%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -939,7 +942,7 @@
             <h3>A.D. 1837 - 1901 维多利亚时期 Victorian era</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%BB%B4%E5%A4%9A%E5%88%A9%E4%BA%9A%E6%97%B6%E6%9C%9F%20Victorian%20era:%5B%5B%E7%BB%B4%E5%A4%9A%E5%88%A9%E4%BA%9A%E6%97%B6%E6%9C%9F%20Victorian%20era%5D%5D">Read more</a></span>
         </div>
         <div class="meta-date">
@@ -958,7 +961,7 @@
             <h3>A.D. 1840 - 1842 第一次鸦片战争</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%B8%80%E6%AC%A1%E9%B8%A6%E7%89%87%E6%88%98%E4%BA%89%20First%20Opium%20War:%5B%5B%E7%AC%AC%E4%B8%80%E6%AC%A1%E9%B8%A6%E7%89%87%E6%88%98%E4%BA%89%20First%20Opium%20War%5D%5D">Read more</a></span>
         </div>
 
@@ -974,7 +977,7 @@
             <h3>A.D. 1870 - 1914 第二次工业革命</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%BA%8C%E6%AC%A1%E5%B7%A5%E4%B8%9A%E9%9D%A9%E5%91%BD%2F%E6%8A%80%E6%9C%AF%E9%9D%A9%E5%91%BD%20Second%20Industrial%20Revolution:%5B%5B%E7%AC%AC%E4%BA%8C%E6%AC%A1%E5%B7%A5%E4%B8%9A%E9%9D%A9%E5%91%BD%2F%E6%8A%80%E6%9C%AF%E9%9D%A9%E5%91%BD%20Second%20Industrial%20Revolution%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -998,7 +1001,7 @@
             <h3>A.D. 1914 - 1918 第一次世界大战 World War I</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I:%5B%5B%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I%5D%5D">Read more</a></span>
         </div>
 
@@ -1019,7 +1022,7 @@
             <h3>A.D. 1917 1917年俄国革命 Russian Revolution</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#1917%E5%B9%B4%E4%BF%84%E5%9B%BD%E9%9D%A9%E5%91%BD%20Russian%20Revolution:%5B%5B1917%E5%B9%B4%E4%BF%84%E5%9B%BD%E9%9D%A9%E5%91%BD%20Russian%20Revolution%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -1036,7 +1039,7 @@
             <p>20世纪时间最长, 最深刻, 影响范围最广的经济衰退。</p>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%A4%A7%E8%90%A7%E6%9D%A1%20Great%20Depression:%5B%5B%E5%A4%A7%E8%90%A7%E6%9D%A1%20Great%20Depression%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -1053,7 +1056,7 @@
             <p>人类史上规模最大的战争，人类死伤人数最多的战争。</p>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%BA%8C%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20II:%5B%5B%E7%AC%AC%E4%BA%8C%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20II%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -1069,7 +1072,7 @@
             <h3>A.D. 1947 - 1991 冷战 Cold War</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%86%B7%E6%88%98%20Cold%20War:%5B%5B%E5%86%B7%E6%88%98%20Cold%20War%5D%5D">Read more</a></span>
         </div>
       </div>
@@ -1098,7 +1101,7 @@
             <h3>A.D. 1986 切尔诺贝利事故</h3>
           </div>
           <span class="timeline-author">
-            <i class="material-icons">travel_explore</i>
+            <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster:%5B%5B%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster%5D%5D">Read more</a></span>
         </div>
       </div>
