update notes of art history

--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -65,13 +65,12 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">4500 BC</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">Asia</h4>
             <h3>4500 B.C. 埃利都于前4500年左右建立了城市</h3>
             <p>埃利都被认为是世界上最早的城市</p>
-            <p class="timeline-author">美索不达米亚文明</p>
           </div>
           <!-- <span class="timeline-author">Africa</span> -->
         </div>
@@ -135,9 +134,9 @@
       
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1700 BC</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>1700 B.C. - 1027 B.C. 商</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -149,9 +148,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1027 BC</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>1027 B.C. - 711 B.C. 西周</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -168,8 +167,24 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
-          <div class="century">770 BC</div>
+          <div class="century">800 BC</div>
           <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>800 B.C. 荷马史诗</h3>
+            <p class="timeline-author">希腊 黑暗时代</p>
+          </div>   
+        </div>
+        <div class="meta-date">
+          <span class="date">800</span>
+          <span class="month">BC</span>
+        </div>
+      </div>
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">770 BC</div>
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>770 B.C. - 256 B.C. 东周</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -181,13 +196,27 @@
           <span class="month">BC</span>
         </div>
       </div>
-      <!-- // Article -->
+
 
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
-          <div class="century">770 BC</div>
+          <div class="century">776 BC</div>
           <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>776 B.C. 第一届奥运会</h3>
+            <p class="timeline-author">希腊 古风时代</p>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">770 BC</div>
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>770 B.C. - 476/403 B.C. 春秋时期</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -196,6 +225,22 @@
         </div>
       </div>
       <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">492 BC</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>492 B.C. - 265 B.C. 柏拉图、苏格拉底时代</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+        </div>
+        <div class="meta-date">
+          <span class="date">500</span>
+          <span class="month">BC</span>
+        </div>
+      </div>
 
       <!-- Article -->
       <div class="timeline-article">
