update history notes

--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -241,6 +241,7 @@
           <span class="month">BC</span>
         </div>
       </div>
+      
 
       <!-- Article -->
       <div class="timeline-article">
@@ -267,9 +268,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">403 BC</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>475/403 B.C. - 221 B.C. 战国时期</h3>
           </div>
@@ -279,11 +280,30 @@
       </div>
       <!-- // Article -->
 
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">331 BC</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>331 B.C. - 323 B.C. 亚历山大帝国</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E4%BA%9A%E5%8E%86%E5%B1%B1%E5%A4%A7%E5%A4%A7%E5%B8%9D%20Alexander%20the%20Great:%5B%5B%E4%BA%9A%E5%8E%86%E5%B1%B1%E5%A4%A7%E5%A4%A7%E5%B8%9D%20Alexander%20the%20Great%5D%5D">Read more</a>
+          </span>
+        </div>
+        <div class="meta-date">
+          <span class="date">300</span>
+          <span class="month">BC</span>
+        </div>
+      </div>
+
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">221 BC</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>221 B.C. - 207 B.C. 秦</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -299,9 +319,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">206 BC</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>206 B.C. - A.D. 9 西汉</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -311,19 +331,6 @@
       </div>
       <!-- // Article -->
 
-      <!-- Article -->
-      <div class="timeline-article">
-        <div class="content-left-container">
-          <div class="century">221 BC</div>
-          <div class="content-left">
-            <h4 class="area">China</h4>
-            <h3>221 B.C. - 207 B.C. 秦</h3>
-            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
-          </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
-        </div>
-      </div>
-      <!-- // Article -->
 
       <!-- Article -->
       <div class="timeline-article">
@@ -347,9 +354,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">9 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 9 - 24 新</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -366,9 +373,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">25 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 25 - 220 东汉</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -382,8 +389,26 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
-          <div class="century">220 AD</div>
+          <div class="century">67 AD</div>
           <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 67 佛教传入中国</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.wikiwand.com/zh-hans/%E4%B8%AD%E5%9C%8B%E4%BD%9B%E6%95%99%E5%8F%B2">Read more</a>
+          </span>
+        </div>
+
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">220 AD</div>
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 220 - 280 三国时期</h3>
             <p>狭义 220 - 280，广义 184/190/208 - 280。</p>
@@ -402,9 +427,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">265 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 265 - 316 西晋</h3>
           </div>
@@ -416,9 +441,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">317 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 317 - 420 东晋</h3>
           </div>
@@ -437,9 +462,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">317 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 317 - 420 东晋</h3>
           </div>
@@ -451,9 +476,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">420 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 420 - 588 南北朝</h3>
             <p><b>南朝 420 - 588</b></p>
@@ -497,17 +522,31 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
-          <div class="century">581 AD</div>
+        <div class="content-right-container">
+          <div class="century">500 AD</div>
           <div class="content-left">
-            <h4 class="area">China</h4>
-            <h3>A.D. 581 - 617 隋</h3>
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 500 - 1500 欧洲中世纪</h3>
+            <p>又被称为 <b>Dark Ages</b></p>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
         <div class="meta-date">
           <span class="date">500</span>
           <span class="month">AD</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">581 AD</div>
+          <div class="content-right">
+            <h4 class="area">China</h4>
+            <h3>A.D. 581 - 617 隋</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
         </div>
       </div>
       <!-- // Article -->
@@ -534,9 +573,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">618 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 618 - 907 唐</h3>
           </div>
@@ -567,9 +606,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">907 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 907 - 960 五代</h3>
             <p>907 - 923 后梁</p>
@@ -591,9 +630,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">907 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 907 - 979 十国</h3>
           </div>
@@ -604,9 +643,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">916 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 916 - 1125 辽</h3>
           </div>
@@ -634,9 +673,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">960 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 960 - 1279 宋</h3>
             <p>960 - 1127 北宋</p>
@@ -644,7 +683,11 @@
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
+      </div>
+      <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article"></div>
         <div class="content-right-container">
           <div class="century">987 AD</div>
           <div class="content-right">
@@ -655,15 +698,14 @@
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E6%B3%95%E5%85%B0%E8%A5%BF%E7%8E%8B%E5%9B%BD%20Kingdom%20of%20France%20987-1792">Read more</a></span>
         </div>
-
       </div>
       <!-- // Article -->
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1038 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1038 - 1227 西夏</h3>
           </div>
@@ -708,9 +750,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1115 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1115 - 1234 金</h3>
           </div>
@@ -725,15 +767,6 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
-          <div class="century">1279 AD</div>
-          <div class="content-left">
-            <h4 class="area">China</h4>
-            <h3>A.D. 1279 - 1368 元</h3>
-          </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
-        </div>
-
         <div class="content-right-container">
           <div class="century">1299 AD</div>
           <div class="content-right">
@@ -751,6 +784,21 @@
         </div>
       </div>
       <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1279 AD</div>
+          <div class="content-right">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1279 - 1368 元</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      
 
       <!-- Article -->
       <div class="timeline-article">
@@ -789,9 +837,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1368 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1368 - 1644 明</h3>
           </div>
@@ -818,21 +866,11 @@
 
       <!-- Article -->
       <div class="timeline-article">
-
-        <div class="content-left-container">
-          <div class="century">1405 AD</div>
-          <div class="content-left">
-            <h4 class="area">China</h4>
-            <h3>A.D. 1405 - 1433 郑和下西洋</h3>
-          </div>
-        </div>
-
-
         <div class="content-right-container">
-          <div class="century">1500 AD</div>
+          <div class="century">1400 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
-            <h3>14C - 17C 文艺复兴</h3>
+            <h3>1400 - 1600 文艺复兴</h3>
           </div>
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
@@ -841,6 +879,18 @@
         <div class="meta-date">
           <span class="date">1400</span>
           <span class="month">AD</span>
+        </div>
+      </div>
+      <!-- // Article --> 
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1405 AD</div>
+          <div class="content-right">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1405 - 1433 郑和下西洋</h3>
+          </div>
         </div>
       </div>
       <!-- // Article -->
@@ -917,9 +967,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1644 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1644 - 1911 清</h3>
           </div>
@@ -1031,9 +1081,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1840 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1840 - 1842 第一次鸦片战争</h3>
           </div>
@@ -1062,9 +1112,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1911 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1911 - 1949 中华民国</h3>
           </div>
@@ -1157,9 +1207,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">1949 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1949 - recent 中华人民共和国</h3>
           </div>
