--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             <li><a href="zenandartofmotorcyclemaintenance/index.html">禅与摩托车维修艺术</a></li>
             <li><a href="MedievalEurope/8kuNoteBook_MedievalEurope.html">欧洲中世纪史</a></li>
             <li><a href="aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html">欧洲现代史</a></li>
+            <li><a href="worldHistoryMap/index.html">世界历史地图</a></li>
             <li><a href="HistoryTimeline/history_timeline.html">历史时间线</a></li>
             <li><a href="ArtHistoryTimeline/art_history_timeline.html">艺术史时间线</a></li>
             <li><a href="EmpireOfCotton/8kuNoteBook_EmpireOfCotton.html">棉花帝国 7%</a></li>
